cluster/core/kube-system/traefik/dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
    traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
spec:
  tls:
    - hosts:
        - "traefik.${SECRET_DOMAIN}"
      secretName: traefik-dashboard-tls
  rules:
    - host: "traefik.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  name: traefik
